--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -12,6 +12,8 @@
     "devDependencies": {},
     "dependencies": {
         "knex": "<0.20.0",
+        "pg": "^8.5.1",
+        "pg-connection-string": "^2.4.0",
         "sqlite3": "^5.0.0",
         "strapi": "3.4.0",
         "strapi-admin": "3.4.0",
@@ -31,8 +33,8 @@
         "uuid": "454004f5-c018-4445-9afb-b539053ca7f6"
     },
     "engines": {
-        "node": ">=10.16.0 <=14.x.x",
-        "npm": ">=6.0.0"
+        "node": "10.x",
+        "npm": ">= 6.0.0"
     },
     "license": "MIT"
 }
