--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
         "clean": "gatsby clean",
         "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
     },
+    "resolutions": {
+        "sharp": "0.24.0"
+    },
     "dependencies": {
         "gatsby": "^2.28.2",
         "gatsby-image": "^2.4.0",
